RESOLVED FIXED63401
With word-break: break-all, words do not break correctly before a surrogate pair
https://bugs.webkit.org/show_bug.cgi?id=63401
Summary With word-break: break-all, words do not break correctly before a surrogate pair
mitz
Reported 2011-06-26 08:28:35 PDT
With word-break: break-all, words do not break correctly before a surrogate pair
Attachments
Measure the two halves of a surrogate pair as a signle character when checking for a mid-word break (22.38 KB, patch)
2011-06-26 08:41 PDT, mitz
darin: review+
mitz
Comment 1 2011-06-26 08:41:39 PDT
Created attachment 98625 [details] Measure the two halves of a surrogate pair as a signle character when checking for a mid-word break
mitz
Comment 2 2011-06-26 09:10:18 PDT
Alexey Proskuryakov
Comment 3 2011-06-26 10:58:53 PDT
This could be a text only test case - it should be easy to determine whether line break occurred or not.
mitz
Comment 4 2011-06-27 10:21:42 PDT
Jessie Berlin
Comment 5 2011-06-27 14:22:32 PDT
Windows-specific results committed in http://trac.webkit.org/changeset/89856
Note You need to log in before you can comment on or make changes to this bug.