With word-break: break-all, words do not break correctly before a surrogate pair https://bugs.webkit.org/show_bug.cgi?id=63401

Reviewed by Darin Adler.

Source/WebCore:

The code to check for mid-word breaks accumulates width one character at a time. It was actually
measuring the two parts of the surrogate pair individually, so they appeared to have zero width.
Fixed by checking for surrogate pairs and measuring the pair as one unit.

Test: fast/text/midword-break-before-surrogate-pair.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::RenderBlock::LineBreaker::nextLineBreak):

LayoutTests:

* fast/text/midword-break-before-surrogate-pair.html: Added.



Canonical link: https://commits.webkit.org/79065@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@89769 268f45cc-cd09-0410-ab3c-d52691b4dbfc